--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drupal-composer-common",
+  "name": "composer-drupal-common",
   "version": "1.0.1",
   "description": "A command-line tool for installing common Drupal 8 contrib modules using composer.",
   "main": "index.js",
