--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "composer-drupal-common",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "A command-line tool for installing common Drupal 8 contrib modules using composer.",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "author": "Miles Lemon",
   "license": "ISC",
+  "repository": "https://github.com/mileslemon/composer-drupal-common",
   "keywords": [
     "drupal",
     "drupal 8",
